--- a/venv.yaml
+++ b/venv.yaml
@@ -39,6 +39,7 @@ dependencies:
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.2
       - pyparsing==3.2.3
+      - python-dotenv==1.1.0
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - rsa==4.9.1
